[gd_scene load_steps=11 format=3 uid="uid://crqg47nso3v3f"]

[ext_resource type="FontFile" uid="uid://7btu78ff8nvs" path="res://Fonts/monkey.ttf" id="1_lvi6q"]
[ext_resource type="Shader" path="res://Shaders/CRTShader.gdshader" id="1_wegpt"]
[ext_resource type="Script" path="res://Scenes/GameOver.gd" id="2_0354q"]
[ext_resource type="Texture2D" uid="uid://ccca3rd0lghux" path="res://Textures/screncaps/screencap01.jpg" id="2_vmprx"]
[ext_resource type="Texture2D" uid="uid://dergqs3rec8u4" path="res://icon.svg" id="4_3js61"]
[ext_resource type="AudioStream" uid="uid://etxmn0v0bhpk" path="res://Sounds/sfx_sounds_pause5_in.wav" id="6_otpm3"]
[ext_resource type="AudioStream" uid="uid://b6q2mbitsxbkl" path="res://Sounds/sfx_sounds_pause5_out.wav" id="7_uw5a3"]
[ext_resource type="AudioStream" uid="uid://qlubxafxsoii" path="res://Sounds/UI/sfx_UI_Select_C.wav" id="8_cp60j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_k12rc"]
shader = ExtResource("1_wegpt")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.452
shader_parameter/scanlines_width = 0.25
shader_parameter/grille_opacity = 0.3
shader_parameter/resolution = Vector2(960, 540)
shader_parameter/pixelate = true
shader_parameter/roll = true
shader_parameter/roll_speed = 8.0
shader_parameter/roll_size = 15.0
shader_parameter/roll_variation = 1.8
shader_parameter/distort_intensity = 0.05
shader_parameter/noise_opacity = 0.082
shader_parameter/noise_speed = 5.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.03
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 1.0
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4bv08"]
shader = ExtResource("1_wegpt")
shader_parameter/overlay = true
shader_parameter/scanlines_opacity = 0.201
shader_parameter/scanlines_width = 0.485
shader_parameter/grille_opacity = 0.263
shader_parameter/resolution = Vector2(640, 480)
shader_parameter/pixelate = false
shader_parameter/roll = true
shader_parameter/roll_speed = 2.5
shader_parameter/roll_size = 6.0
shader_parameter/roll_variation = 2.0
shader_parameter/distort_intensity = 0.025
shader_parameter/noise_opacity = 0.0
shader_parameter/noise_speed = 2.0
shader_parameter/static_noise_intensity = 0.06
shader_parameter/aberration = 0.02
shader_parameter/brightness = 1.4
shader_parameter/discolor = true
shader_parameter/warp_amount = 0.1
shader_parameter/clip_warp = false
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 1.0

[node name="GameOver" type="Node2D"]
z_index = 10
material = SubResource("ShaderMaterial_k12rc")
script = ExtResource("2_0354q")

[node name="Screencap01" type="Sprite2D" parent="."]
position = Vector2(517, 349)
rotation = 0.261799
scale = Vector2(0.775071, 0.85245)
texture = ExtResource("2_vmprx")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
clip_contents = false
offset_top = 176.0
offset_right = 961.0
offset_bottom = 284.0
theme_override_fonts/normal_font = ExtResource("1_lvi6q")
theme_override_font_sizes/normal_font_size = 128
bbcode_enabled = true
text = "[center][wave]GAME OVER[/wave][/center]"

[node name="Icon" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_4bv08")
position = Vector2(480, 272)
scale = Vector2(7.5, 4.25)
texture = ExtResource("4_3js61")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 160.0
offset_right = 1198.0
offset_bottom = 639.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.802004, 0.802004)
theme_override_constants/separation = 19
alignment = 1

[node name="btn_PlayAgain" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("1_lvi6q")
theme_override_font_sizes/font_size = 64
text = "Play Again?"

[node name="btn_Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("1_lvi6q")
theme_override_font_sizes/font_size = 64
text = "QUIT"

[node name="sfx_open" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_otpm3")
volume_db = -8.0
pitch_scale = 0.9
autoplay = true

[node name="sfx_close" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_uw5a3")
volume_db = -13.0
pitch_scale = 0.8

[node name="sfx_changeSelection" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_cp60j")
volume_db = -1.0
mix_target = 2

[connection signal="focus_entered" from="VBoxContainer/btn_PlayAgain" to="sfx_changeSelection" method="play"]
[connection signal="mouse_entered" from="VBoxContainer/btn_PlayAgain" to="sfx_changeSelection" method="play"]
[connection signal="pressed" from="VBoxContainer/btn_PlayAgain" to="." method="_on_btn_play_again_pressed"]
[connection signal="focus_entered" from="VBoxContainer/btn_Quit" to="sfx_changeSelection" method="play"]
[connection signal="mouse_entered" from="VBoxContainer/btn_Quit" to="sfx_changeSelection" method="play"]
[connection signal="pressed" from="VBoxContainer/btn_Quit" to="." method="_on_btn_quit_pressed"]
